# libcamera-cpp-demo

./: CMakeLists.txt  LibCamera.cpp  README.md  blueintesity.py  frame.cpp  libcamere_example.cpp  libster.c  main.cpp  opencvimwrite.cpp  opencvnolib.c  opencvnolib.cpp  readbin.cpp  simpleLib.c  simpleLib.cpp  space_hawks.py
